fixed text-align placement for project tiltes

--- a/index.css
+++ b/index.css
@@ -633,6 +633,7 @@ html,body{
 
   .project_info>h3{
     margin:0 10px 10px;
+    text-align: left;
   }
 
   .project_info_image{
